fix sass version check

--- a/build.xml
+++ b/build.xml
@@ -94,7 +94,7 @@
 
         <echo msg="Check SASS runtime" />
         <exec
-            command="sass version"
+            command="sass --version"
             checkreturn="true"
             logoutput="true"
         />
