change grunt and npm path

--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,7 @@
         </copy>
 
         <exec
-            command="npm --no-color install"
+            command="/var/lib/jenkins/bin/npm --no-color install"
             dir="${src.dir.resolved}/tao/views/build"
             checkreturn="true"
             logoutput="true"
@@ -72,7 +72,7 @@
 
         <echo msg="Compile JS" />
         <exec
-            command="npm run bundle"
+            command="/var/lib/jenkins/bin/npm run bundle"
             dir="${src.dir.resolved}/tao/views/build"
             checkreturn="true"
             logoutput="true"
@@ -87,7 +87,7 @@
 
         <echo msg="Compile SASS" />
         <exec
-            command="npm run sass"
+            command="/var/lib/jenkins/bin/npm run sass"
             dir="${src.dir.resolved}/tao/views/build"
             checkreturn="true"
             logoutput="true"
@@ -97,7 +97,7 @@
 
         <echo msg="Run tests" />
         <exec
-            command="grunt testall --no-color --force --reports=${reports.dir.resolved}"
+            command="/var/lib/jenkins/bin/grunt testall --no-color --force --reports=${reports.dir.resolved}"
             dir="${src.dir.resolved}/tao/views/build"
             checkreturn="false"
             logoutput="true"
@@ -108,7 +108,7 @@
     <target name="jshint" description="Run quality checks">
         <echo msg="Lint ${extension}" />
         <exec
-            command="grunt jshint:extensionreport --extension=${extension} --reports=${reports.dir.resolved} --no-color --force"
+            command="/var/lib/jenkins/bin/grunt jshint:extensionreport --extension=${extension} --reports=${reports.dir.resolved} --no-color --force"
             dir="${src.dir.resolved}/tao/views/build"
             checkreturn="false"
             logoutput="true"
